<resources>
    <string name="app_name">ViewAnimation</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="product_description">Short description</string>
    <string name="profile_user_name">User name</string>
    <string name="profile_email">Email</string>
    <string name="user_name">John Doe</string>
    <string name="user_email">john.doe@server.com</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
</resources>
