<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@null">

        <Button
            android:id="@+id/actionProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:textSize="20sp"
            android:text="@string/products"
            android:textColor="@drawable/button_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/products" />

        <Button
            android:id="@+id/actionProfile"
            android:layout_below="@+id/actionProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:textSize="20sp"
            android:text="@string/profile"
            android:textColor="@drawable/button_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/profile" />

        <Button
            android:enabled="false"
            android:id="@+id/actionSettings"
            android:layout_below="@+id/actionProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:textSize="20sp"
            android:text="@string/settings"
            android:textColor="@drawable/button_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/settings" />

        <Button
            android:enabled="false"
            android:id="@+id/actionLogout"
            android:layout_below="@+id/actionSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:textSize="20sp"
            android:text="@string/logout"
            android:textColor="@drawable/button_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/exit" />
    </RelativeLayout>
</RelativeLayout>
